config/7-traffic-management/lab5/dr-ratings-outlier-detection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        localityLbSetting:
          enabled: false
      outlierDetection:
        baseEjectionTime: 10s
        consecutive5xxErrors: 2
        interval: 10s
        maxEjectionPercent: 30
      tls:
        mode: ISTIO_MUTUAL
